[project]
name = "scikit-bio-parasail"
description = ""
authors = [
    {name = "Andrew Robbins & Joris Vankerschaver", email = "andrew@robbinsa.me"},
]
license = "BSD-3-Clause"
dependencies = [
    "scikit-bio>=0.5.7",
    "parasail>=1.2.4",
]
requires-python = ">=3.8,<3.12"
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/theAeon/scikit-bio-parasail"

[project.optional-dependencies]
[tool.pdm]
includes = ['skbio_parasail']
[tool.pdm.version]
source = "scm"
write_to = "mypackage/__version__.py"
write_template = "__version__ = '{}'"
[tool.pdm.dev-dependencies]
dev = [
    "twine>=4.0.0",
]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
